--- a/EKS/service.yaml
+++ b/EKS/service.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   ports:
     - port: 80
-      targetPort: 80
+      targetPort: 8080
       protocol: TCP
-  type: ClusterIP
+  type: NodePort
   selector:
     app: "mythical-api"
