fixing the cfn to remove the ALB and fix the bucketname for DNS

--- a/EKS/deployment.yaml
+++ b/EKS/deployment.yaml
@@ -22,3 +22,6 @@ spec:
         env:
         - name: DDB_TABLE_NAME
           value: Table-MythicalEKS
+      serviceAccountName: ddb-pod-read 
+      securityContext:
+        fsGroup: 65534
