--- a/EKS/MythicalCluster.yaml
+++ b/EKS/MythicalCluster.yaml
@@ -6,17 +6,17 @@ metadata:
   region: eu-west-1
 
 vpc:
-  id: "vpc-0a7fc473374b68d9e"  # (optional, must match VPC ID used for each subnet below)
+  id: "your VPC ID"  # (optional, must match VPC ID used for each subnet below)
   cidr: "10.0.0.0/16"       # (optional, must match CIDR used by the given VPC)
   subnets:
     # must provide 'private' and/or 'public' subnets by availibility zone as shown
     private:
       eu-west-1a:
-        id: "subnet-0a28df50a5b616de8"
+        id: "your subnet id"
         cidr: "10.0.2.0/24" # (optional, must match CIDR used by the given subnet)
 
       eu-west-1b:
-        id: "subnet-0ca782f9869765adc"
+        id: "your subnet id" 
         cidr: "10.0.3.0/24"  # (optional, must match CIDR used by the given subnet)
 
 managedNodeGroups:
